--- a/Example/LoginKit.xcodeproj/xcshareddata/xcschemes/YomLoginKit-Example.xcscheme
+++ b/Example/LoginKit.xcodeproj/xcshareddata/xcschemes/YomLoginKit-Example.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "YomLoginKit_Example.app"
-               BlueprintName = "YomLoginKit_Example"
-               ReferencedContainer = "container:YomLoginKit.xcodeproj">
+               BuildableName = "LoginKit_Example.app"
+               BlueprintName = "LoginKit_Example"
+               ReferencedContainer = "container:LoginKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "YomLoginKit_Tests.xctest"
-               BlueprintName = "YomLoginKit_Tests"
-               ReferencedContainer = "container:YomLoginKit.xcodeproj">
+               BuildableName = "LoginKit_Tests.xctest"
+               BlueprintName = "LoginKit_Tests"
+               ReferencedContainer = "container:LoginKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,7 +40,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -48,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "YomLoginKit_Tests.xctest"
-               BlueprintName = "YomLoginKit_Tests"
-               ReferencedContainer = "container:YomLoginKit.xcodeproj">
+               BuildableName = "LoginKit_Tests.xctest"
+               BlueprintName = "LoginKit_Tests"
+               ReferencedContainer = "container:LoginKit.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -58,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "YomLoginKit_Example.app"
-            BlueprintName = "YomLoginKit_Example"
-            ReferencedContainer = "container:YomLoginKit.xcodeproj">
+            BuildableName = "LoginKit_Example.app"
+            BlueprintName = "LoginKit_Example"
+            ReferencedContainer = "container:LoginKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -70,7 +69,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -82,9 +80,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "YomLoginKit_Example.app"
-            BlueprintName = "YomLoginKit_Example"
-            ReferencedContainer = "container:YomLoginKit.xcodeproj">
+            BuildableName = "LoginKit_Example.app"
+            BlueprintName = "LoginKit_Example"
+            ReferencedContainer = "container:LoginKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -101,9 +99,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "YomLoginKit_Example.app"
-            BlueprintName = "YomLoginKit_Example"
-            ReferencedContainer = "container:YomLoginKit.xcodeproj">
+            BuildableName = "LoginKit_Example.app"
+            BlueprintName = "LoginKit_Example"
+            ReferencedContainer = "container:LoginKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
