--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,6 +4,7 @@ platform :ios, '10.0'
 target 'LoginKit_Example' do
   pod 'LoginKit', :path => '../'
   pod 'IHProgressHUD'
+  pod 'Reveal-SDK'
 
   target 'LoginKit_Tests' do
     inherit! :search_paths
